# webpuppet-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE-DEBT.md  REUSE.toml  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  trivy-secret.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: fleet-gap.yml
.github/workflows/: ci.yml  close-issues-on-main.yml  fleet-ci.yml  fleet-security.yml  release.yml  reopen-issues-closed-off-main.yml
docs/: ASSESSMENT.md  FLEET_STANDARDS.md  LOCAL_CHECKS.md  ROADMAP.md
docs/tero-index/: INDEX.md  MANIFEST.toml  README.md  index.json
examples/: research_runner.rs
scripts/: check.sh  close-linked-issues.sh
src/: browser.rs  config.rs  credentials.rs  display.rs  error.rs  intervention.rs  lib.rs  permissions.rs  puppet.rs  session.rs
src/providers/: chatgpt.rs  claude.rs
src/security/: detectors.rs  encryption.rs  injection.rs  mod.rs  patterns.rs  pii.rs  pipeline.rs  proxy.rs  redaction.rs  screening.rs  secrets.rs
tests/: integration.rs
